--- a/public/css/main.css
+++ b/public/css/main.css
@@ -431,18 +431,28 @@ button {
 
 .film-details {
   position: fixed;
+  display: grid;
+  justify-items: end;
   height: 100vh;
-  top: 0;
-  right: 0;
+  inset: 0;
   z-index: 1;
-  background-color: #212126;
   box-shadow: -3px 2px 13px 0 #141628;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
+}
+
+.films-details__shadow {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: not-allowed;
 }
 
 .film-details__inner {
   background-color: #212126;
+  width: 1190px;
+  position: relative;
+  height: 100%;
+  overflow: auto;
 }
 
 .film-details__top-container {
